// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Menu Popover component > should render and close Popover based on any element with data-close-menu="true" click and match snapshot 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-menu"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
    <div
      class="mocked-styled-0 el-menu-popover"
      data-open="true"
      style="top: 4px;"
    >
      <div
        class="mocked-styled-2 el-menu-list"
        role="menu"
      >
        <button
          class="mocked-styled-3 el-menu-item-button"
          data-close-menu="true"
          role="menuitem"
        >
          Menu Item
        </button>
        <button
          class="mocked-styled-3 el-menu-item-button"
          data-close-menu="false"
          role="menuitem"
        >
          Non closing Menu Item
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu Popover component > should render and close Popover based on any element with data-close-menu="true" click and match snapshot 2`] = `
<DocumentFragment>
  <div
    class="mocked-styled-1 el-menu"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      role="button"
    >
      Trigger
    </button>
  </div>
</DocumentFragment>
`;
